added correct title

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<link rel='shortcut icon' href='favicon.ico' type='image/x-icon'/ >
+		<title>RövarspråkÖversättare</title>
 		<link rel="stylesheet" href="css/bootstrap.min.css">
 		<link rel="stylesheet" href="css/bootstrap-responsive.min.css">
 		<link rel="stylesheet" href="css/rovar.css">
